package code.block;

public class BearTrap extends Trap {

    /**
     * Construit un block piege a ours
     */
    public BearTrap() {
        super("tank_12_", 2, 11, -2, true, true);
    }

}
