package code.block;

public class Border extends Block {

    /** 
     * Construit un block bordure
    */
    public Border() {
        super("tank_5_", 4, 0, false);
    }
    
}
