package code.block;

public class Fire extends Trap {

    /**
     * Construit un block feu
     */
    public Fire() {
        super("tank_20_", 4, 12, -2, true, false);
    }
}