package code.block;

public class Heal extends AnimateBlock {

    /**
     * Construit un block heal
     */
    public Heal() {
        super("tank_15_", 3, 10, 2, true);
    }

}
