package code.block;

public class Wall extends Block {

    /** 
     * Construit un block mur
    */
    public Wall() {
        super("tank_12_", 6, 1, false);
    }
}