package code.block;

public class empty extends Block {

    public empty() {
        super("empty", 0, 0);
    }

}
