package code.jeu;

public interface MovingProperty {
    public boolean canMove(int direction);
}
